--- a/views/signIn.ejs
+++ b/views/signIn.ejs
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>signIn</title>
-    <link href="css/main.css" type="text/css" rel="stylesheet">
+    <link rel='stylesheet' href='/stylesheets/css/main.css' />
 </head>
 <body>
 <div class="sign">
-    <img src="images/bg.jpg" class="bg-img">
+    <img src="/images/bg.jpg" class="bg-img">
     <div class="signBox-inner">
         <div class="sign">
             <div class="signTitle">
@@ -18,15 +18,16 @@
                 <form id="zcForm">
                     用户名：<input type="text" id="username" name="username" class="signText-input"><br/>
                     密&nbsp;&nbsp;&nbsp;码 ：<input type="password" id="password" name="password" class="signText-input"><br/>
-                    <button type="submit" class="signIn signBtn">Sign in</button>
-                    <p class="toSignIn" id="toSignUp"><a href="views/signUp.html" class="to-sign">>> to Sign up</a></p>
+                    <button class="signIn signBtn">Sign in</button>
+                    <p class="toSignIn" id="toSignUp"><a href="/signUp" class="to-sign">>> to Sign up</a></p>
                     <p id="warning"></p>
                 </form>
             </div>
         </div>
     </div>
 </div>
-<script src="vendor/jquery.js"></script>
-<script src="js/sign.js"></script>
+<script src="/vendor/jquery.js"></script>
+<script src="/javascripts/sign.js"></script>
 </body>
 </html>
+
