--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>signUp</title>
-    <link href="../css/main.css" type="text/css" rel="stylesheet">
+    <link rel='stylesheet' href='/stylesheets/css/main.css' />
 </head>
 <body>
 <div class="sign">
-    <img src="../images/bg.jpg" class="bg-img">
+    <img src="/images/bg.jpg" class="bg-img">
     <div class="signBox-inner">
         <div class="sign">
             <div class="signTitle">
@@ -21,14 +21,14 @@
                     密码设置：<input type="password" id="password" name="password"  class="signText-input"><br/>
                     重复密码：<input type="password" id="pswSure"  class="signText-input"><br/>
                     <button class="signBtn signBtnUp signUp">Sign up</button>
-                    <p class="toSignIn" id="toSignIn"><a href="../index.html" class="to-sign">>> to Sign in</a></p>
+                    <p class="toSignIn" id="toSignIn"><a href="/signIn" class="to-sign">>> to Sign in</a></p>
                     <p id="warning"></p>
                 </form>
             </div>
         </div>
     </div>
 </div>
-<script src="../vendor/jquery.js"></script>
-<script src="../js/sign.js"></script>
+<script src="/vendor/jquery.js"></script>
+<script src="/javascripts/sign.js"></script>
 </body>
 </html>
