--- a/views/uploadOrder.ejs
+++ b/views/uploadOrder.ejs
@@ -16,7 +16,7 @@
                     </div>
                     <div class="h-right">
                         <p id="personName" class="h-r-userName"><%= username %></p>
-                        <span class="exit fr">退出登录</span>
+                        <a class="exit fr" href="/signIn">退出登录</a>
                         <p><input type="button" value="发布商品" class="h-r-input" onclick="getOrder()"/>
                             <input type="button" value="我的关注" class="h-r-input"/>
                         </p>
