Add Recommend function for index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,13 +37,13 @@
             <li>其他</li>
           </ul>
         </div>
-        <div class="c-part1-right">
-          <img src="/images/paart1-1.jpg">
+        <div class="c-part1-right recommend">
+          <!--<img src="/images/paart1-1.jpg">
           <img src="/images/paart1-7.jpg">
           <img src="/images/paart1-2.jpg">
           <img src="/images/paart1-6.jpg" class="fr">
           <img src="/images/paart1-5.jpg">
-          <img src="/images/paart1-4.jpg" class="fr">
+          <img src="/images/paart1-4.jpg" class="fr">-->
         </div>
         <div class="c-part1-main-index">
           <div id="slider">
@@ -75,48 +75,6 @@
 </div>
 <script src="/vendor/jquery.js"></script>
 <script src="/javascripts/index.js"></script>
-<script>
-  //ajax
-  window.onload = function(){
-    var xhr;
-    if (window.XMLHttpRequest) {
-      xhr = new XMLHttpRequest();
-    } else {
-      xhr = new ActiveXObject();
-    }
-    xhr.open('get', '/idx_ajx', true);
-    xhr.send();
-    xhr.onreadystatechange = function(){
-      if(xhr.readyState == 4 &&  xhr.status == 200){
-        var str="";
-        var resJson = xhr.responseText;
-        var res = eval("("+resJson+")");
-        for(var i=0;i<res.length;i++){
-          str =str+ "<li id='order_show' onclick='order_show('"+res[i]._id+"')'><p id='hide_id' class='hidden'>"+res[i]._id+"</p>"
-          +"<img src='../../public/images/show1.png' class='c-part2-new-ul-img'>"
-          +"<div class='c-part2-new-ul-img-price fr'>￥"+res[i].price
-          +"</div><div class='c-part2-detail'><p class='c-part2-detail-goodsName'>"
-          +res[i].goodsName+"</p><p class='c-part2-detail-describe'>"+res[i].describe
-          +"<p class='c-part2-detail-more'><span>"+res[i].goodsCode
-          +"</span>&nbsp;<span>"+res[i].classes
-          +"</span>&nbsp;<span>"+res[i].grade
-          +"</span></p></p></div></li>"
-        }
-        document.getElementById('c-part2-new-ul').innerHTML = str;
-        var e=event || window.event;
-
-        if (e && e.stopPropagation){
-          e.stopPropagation();
-        }
-        else{
-          e.cancelBubble=true;
-        }
-        /*var id = document.getElementById('hide_id').innerHTML;
-         document.getElementById('order_show').onclick = order_show(id);*/
-      }
-    };
-  };
-</script>
 </body>
 
 </html>
