Add the page of orderDetail.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,14 +37,9 @@
             <li>其他</li>
           </ul>
         </div>
-        <div class="c-part1-right recommend">
-          <!--<img src="/images/paart1-1.jpg">
-          <img src="/images/paart1-7.jpg">
-          <img src="/images/paart1-2.jpg">
-          <img src="/images/paart1-6.jpg" class="fr">
-          <img src="/images/paart1-5.jpg">
-          <img src="/images/paart1-4.jpg" class="fr">-->
-        </div>
+
+        <div class="c-part1-right recommend"></div>
+
         <div class="c-part1-main-index">
           <div id="slider">
             <ul class="list">
