--- a/public/stylesheets/css/main.css
+++ b/public/stylesheets/css/main.css
@@ -44,6 +44,100 @@ i, u, b, em, span, small {
   font-weight: normal;
   font-style: normal; }
 
+* {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  text-decoration: none; }
+
+.head {
+  height: 100px;
+  position: relative;
+  background: white; }
+
+.head-inner {
+  width: 1024px;
+  height: 100%;
+  position: relative;
+  margin: 0 auto; }
+
+.h-r-left {
+  width: 20%;
+  height: 95px;
+  line-height: 95px;
+  text-align: center;
+  position: relative;
+  display: inline-block;
+  color: #00b188;
+  font-size: 3em;
+  font-weight: 800; }
+
+.h-r-left img {
+  width: 100%;
+  height: 100%;
+  position: relative; }
+
+.h-right {
+  width: 280px;
+  height: 50px;
+  position: relative;
+  float: right;
+  margin-top: 45px;
+  overflow: hidden; }
+
+.h-r-userName {
+  width: 73%;
+  height: 16px;
+  line-height: 16px;
+  position: relative;
+  display: inline-block;
+  font-size: 1em;
+  color: grey;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: center; }
+
+.exit {
+  display: inline-block;
+  font-size: 12px;
+  margin-right: 23px;
+  color: lightgray; }
+
+.exit:hover {
+  color: #ef735f;
+  cursor: pointer; }
+
+.h-r-input {
+  display: inline-block;
+  position: relative;
+  width: 45%;
+  height: 28px;
+  line-height: 28px;
+  background: #00b188;
+  color: white;
+  font-size: 1em;
+  font-weight: 600;
+  margin-top: 5px;
+  text-align: center;
+  cursor: pointer;
+  border: none; }
+
+.h-r-input:hover {
+  background: #ef735f; }
+
+.content {
+  width: 100%;
+  height: auto;
+  position: relative;
+  background: white; }
+
+.nav-inner {
+  width: 1024px;
+  height: 40px;
+  position: relative;
+  margin: 0 auto; }
+
 body, html {
   font-size: 12px; }
 
@@ -52,7 +146,7 @@ body, html {
   padding: 0;
   border: none;
   text-decoration: none;
-  /*ÄÚÈÝcontent*/
+  /*ï¿½ï¿½ï¿½ï¿½content*/
   /*part1*/
   /*part2*/
   /*show.html  show.html  show.html  show.html  show.html  show.html  show.html  show.html  */
@@ -60,16 +154,10 @@ body, html {
   /*content*/
   /*part2*/
   /*goods.ejs  goods.ejs  goods.ejs  goods.ejs  goods.ejs  goods.ejs  goods.ejs  */
-  /*ÄÚÈÝcontent*/
+  /*ï¿½ï¿½ï¿½ï¿½content*/
   /*err*/
-  /*ÆÀÂÛ comment-box*/
+  /*ï¿½ï¿½ï¿½ï¿½ comment-box*/
   /*filter*/ }
-  .index * {
-    margin: 0;
-    padding: 0;
-    border: none;
-    list-style-type: none;
-    text-decoration: none; }
   .index #box {
     width: 100%;
     height: auto;
@@ -81,87 +169,12 @@ body, html {
     float: right; }
   .index .hidden {
     display: none; }
-  .index .head {
-    height: 100px;
-    position: relative;
-    background: white; }
-  .index .head-inner {
-    width: 1024px;
-    height: 100%;
-    position: relative;
-    margin: 0 auto; }
-  .index .h-r-left {
-    width: 20%;
-    height: 95px;
-    line-height: 95px;
-    text-align: center;
-    position: relative;
-    display: inline-block;
-    color: #00b188;
-    font-size: 3em;
-    font-weight: 800; }
-  .index .h-r-left img {
-    width: 100%;
-    height: 100%;
-    position: relative; }
-  .index .h-right {
-    width: 280px;
-    height: 50px;
-    position: relative;
-    float: right;
-    margin-top: 45px;
-    overflow: hidden; }
-  .index .h-r-userName {
-    width: 73%;
-    height: 16px;
-    line-height: 16px;
-    position: relative;
-    display: inline-block;
-    font-size: 1em;
-    color: grey;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    text-align: center; }
-  .index .exit {
-    display: inline-block;
-    font-size: 12px;
-    margin-right: 23px;
-    color: lightgray; }
-  .index .exit:hover {
-    color: #ef735f;
-    cursor: pointer; }
-  .index .h-r-input {
-    display: inline-block;
-    position: relative;
-    width: 45%;
-    height: 28px;
-    line-height: 28px;
-    background: #00b188;
-    color: white;
-    font-size: 1em;
-    font-weight: 600;
-    margin-top: 5px;
-    text-align: center;
-    cursor: pointer; }
-  .index .h-r-input:hover {
-    background: #ef735f; }
   .index .lin {
     width: 100%;
     min-width: 1024px;
     height: 15px;
     position: relative;
     background: #00b188; }
-  .index .content {
-    width: 100%;
-    height: auto;
-    position: relative;
-    background: white; }
-  .index .nav-inner {
-    width: 1024px;
-    height: 40px;
-    position: relative;
-    margin: 0 auto; }
   .index .content-part1 {
     width: 100%;
     height: 400px; }
@@ -195,12 +208,35 @@ body, html {
     position: relative;
     float: right;
     margin-right: 1.5%; }
-  .index .c-part1-right img {
+  .index .recommend-link {
+    display: inline-block;
+    position: relative;
     width: 47%;
     height: 30%;
     margin-top: 3%; }
-  .index .c-part1-right img:hover {
+  .index .recommend-link:hover {
     cursor: pointer; }
+    .index .recommend-link:hover .recommend-detail {
+      display: inline-block; }
+  .index .c-part1-right img {
+    /*width: 47%;
+    height: 30%;
+    margin-top: 3%;*/
+    position: relative;
+    width: 100%;
+    height: 100%; }
+  .index .recommend-detail {
+    display: none;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    line-height: 120px;
+    font-size: 18px;
+    color: #00b188;
+    background: rgba(245, 245, 245, 0.8);
+    text-align: center;
+    z-index: 11; }
   .index .c-part1-main {
     width: 520px;
     height: 100%;
@@ -339,10 +375,14 @@ body, html {
     text-align: center;
     float: left;
     margin-left: 10px;
-    color: white;
     font-size: 1em;
     font-weight: 600;
     letter-spacing: 2px; }
+    .index .nav-inner-ul li a {
+      display: inline-block;
+      width: 100%;
+      height: 100%;
+      color: white; }
   .index .nav-inner-ul li:hover {
     background: #01a57f;
     cursor: pointer; }
@@ -364,7 +404,7 @@ body, html {
     background: white;
     margin-top: 20px; }
   .index .c-goods-img {
-    width: 350px;
+    width: 740px;
     height: 350px;
     position: relative;
     display: inline-block; }
@@ -377,12 +417,6 @@ body, html {
     position: relative;
     float: right;
     margin-right: 1.5%; }
-  .index .c-part1-right img {
-    width: 47%;
-    height: 30%;
-    margin-top: 3%; }
-  .index .c-part1-right img:hover {
-    cursor: pointer; }
   .index .c-part1-main {
     width: 360px;
     height: 330px;
@@ -447,7 +481,8 @@ body, html {
     font-size: 0.9em;
     font-weight: 600;
     letter-spacing: 2px;
-    margin-top: 10px; }
+    margin-top: 10px;
+    border: none; }
   .index .c-goods-focus:hover {
     background: #ef735f;
     cursor: pointer; }
