--- a/public/stylesheets/sass/_index.scss
+++ b/public/stylesheets/sass/_index.scss
@@ -5,9 +5,6 @@ body,html {font-size: 12px;}
   border:none;
   text-decoration: none;
 
-
-  *{margin: 0;padding: 0;border: none;
-    list-style-type: none;text-decoration: none;}
   #box{
     width: 100%;
     height: auto;
@@ -17,81 +14,7 @@ body,html {font-size: 12px;}
   .fl{float: left;}
   .fr{float: right;}
   .hidden{display: none}
-  .head{
-    height: 100px;
-    position: relative;
-    background: white;
-  }
-  .head-inner{
-    width: 1024px;
-    height: 100%;
-    position: relative;
-    margin: 0 auto;
-  }
-  .h-r-left{
-    width: 20%;
-    height: 95px;
-    line-height: 95px;
-    text-align: center;
-    position: relative;
-    display: inline-block;
-    color: #00b188;
-    font-size: 3em;
-    font-weight: 800;
-  }
-  .h-r-left img{
-    width: 100%;
-    height: 100%;
-    position: relative;
-  }
-  .h-right{
-    width:280px;
-    height: 50px;
-    position: relative;
-    float: right;
-    margin-top: 45px;
-    overflow: hidden;
-  }
-  .h-r-userName{
-    width: 73%;
-    height: 16px;
-    line-height: 16px;
-    position: relative;
-    display: inline-block;
-    font-size: 1em;
-    color: grey;
-    white-space: nowrap;
-    overflow:hidden;
-    text-overflow: ellipsis;
-    text-align: center;
-  }
-  .exit{
-    display: inline-block;
-    font-size: 12px;
-    margin-right: 23px;
-    color: lightgray;
-  }
-  .exit:hover{
-    color: #ef735f;
-    cursor: pointer;
-  }
-  .h-r-input{
-    display: inline-block;
-    position: relative;
-    width: 45%;
-    height: 28px;
-    line-height: 28px;
-    background: #00b188;
-    color:white;
-    font-size: 1em;
-    font-weight: 600;
-    margin-top: 5px;
-    text-align: center;
-    cursor: pointer;
-  }
-  .h-r-input:hover{
-    background: #ef735f;
-  }
+
   .lin{
     width: 100%;
     min-width: 1024px;
@@ -99,19 +22,7 @@ body,html {font-size: 12px;}
     position: relative;
     background: #00b188;
   }
-  /*ÄÚÈÝcontent*/
-  .content{
-    width: 100%;
-    height: auto;
-    position: relative;
-    background: white;
-  }
-  .nav-inner{
-    width: 1024px;
-    height: 40px;
-    position: relative;
-    margin: 0 auto;
-  }
+  /*ï¿½ï¿½ï¿½ï¿½content*/
   /*part1*/
   .content-part1{
     width: 100%;
@@ -152,13 +63,41 @@ body,html {font-size: 12px;}
     float: right;
     margin-right: 1.5%;
   }
-  .c-part1-right img{
+  .recommend-link {
+    display: inline-block;
+    position: relative;
     width: 47%;
     height: 30%;
     margin-top: 3%;
   }
-  .c-part1-right img:hover{
+
+  .recommend-link:hover {
     cursor: pointer;
+
+    .recommend-detail {
+      display: inline-block;
+    }
+  }
+  .c-part1-right img{
+    /*width: 47%;
+    height: 30%;
+    margin-top: 3%;*/
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+  .recommend-detail {
+    display: none;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    line-height: 120px;
+    font-size: 18px;
+    color: #00b188;
+    background: rgba(245, 245,245, 0.8);
+    text-align: center;
+    z-index: 11;
   }
   .c-part1-main{
     width: 520px;
@@ -319,10 +258,16 @@ body,html {font-size: 12px;}
     text-align: center;
     float: left;
     margin-left: 10px;
-    color: white;
     font-size: 1em ;
     font-weight: 600;
     letter-spacing: 2px;
+
+    a {
+      display: inline-block;
+      width: 100%;
+      height: 100%;
+      color: white;
+    }
   }
   .nav-inner-ul li:hover{
     background: #01a57f;
@@ -347,7 +292,7 @@ body,html {font-size: 12px;}
 
   /*goods.ejs  goods.ejs  goods.ejs  goods.ejs  goods.ejs  goods.ejs  goods.ejs  */
 
-  /*ÄÚÈÝcontent*/
+  /*ï¿½ï¿½ï¿½ï¿½content*/
   .c-goods{
     width: 1024px;
     height: 350px;
@@ -356,7 +301,8 @@ body,html {font-size: 12px;}
     margin-top: 20px;
   }
   .c-goods-img{
-    width: 350px;
+    //width: 350px;
+    width: 740px;
     height: 350px;
     position: relative;
     display: inline-block;
@@ -371,14 +317,6 @@ body,html {font-size: 12px;}
     position: relative;
     float: right;
     margin-right: 1.5%;
-  }
-  .c-part1-right img{
-    width: 47%;
-    height: 30%;
-    margin-top: 3%;
-  }
-  .c-part1-right img:hover{
-    cursor: pointer;
   }
   .c-part1-main{
     width: 360px;
@@ -453,6 +391,7 @@ body,html {font-size: 12px;}
     font-weight: 600;
     letter-spacing: 2px;
     margin-top: 10px;
+    border: none;
   }
   .c-goods-focus:hover{
     background: #ef735f;
@@ -472,7 +411,7 @@ body,html {font-size: 12px;}
     background: white;
   }
 
-  /*ÆÀÂÛ comment-box*/
+  /*ï¿½ï¿½ï¿½ï¿½ comment-box*/
   .comment-box{
     width: 100%;
     height: auto;
