--- a/public/stylesheets/css/main.css
+++ b/public/stylesheets/css/main.css
@@ -138,6 +138,33 @@ i, u, b, em, span, small {
   position: relative;
   margin: 0 auto; }
 
+/*order_search  order_search  order_search  order_search  order_search  order_search  */
+.c-r-h1 {
+  margin: 10px 0 10px 0; }
+
+td {
+  width: 70px;
+  height: 30px;
+  border-right: 1px solid #e8edf1;
+  cursor: pointer;
+  overflow: hidden; }
+
+.c-r-table th {
+  background: #00b188;
+  color: white;
+  height: 30px;
+  width: 80px; }
+
+.c-r-td-addLength {
+  width: 150px; }
+
+.edit {
+  font-weight: 600; }
+
+.edit:hover {
+  background: #ef735f;
+  color: white; }
+
 body, html {
   font-size: 12px; }
 
@@ -482,10 +509,13 @@ body, html {
     font-weight: 600;
     letter-spacing: 2px;
     margin-top: 10px;
-    border: none; }
+    border: none;
+    outline: none; }
   .index .c-goods-focus:hover {
     background: #ef735f;
     cursor: pointer; }
+  .index .on-focus {
+    background: #ef735f; }
   .index .errContent {
     text-align: center;
     background: white;
