--- a/public/stylesheets/sass/_index.scss
+++ b/public/stylesheets/sass/_index.scss
@@ -392,10 +392,15 @@ body,html {font-size: 12px;}
     letter-spacing: 2px;
     margin-top: 10px;
     border: none;
+    outline: none;
   }
   .c-goods-focus:hover{
     background: #ef735f;
     cursor: pointer;
+  }
+
+  .on-focus {
+    background: #ef735f;
   }
 
   /*err*/
