--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
       <div class="h-right">
         <p id="personName" class="h-r-userName"><%= username%></p><a class="exit fr" href="/signIn">退出登录</a>
         <p><a href="/uploadOrder" class="h-r-input">发布商品</a>
-          <input type="button" value="我的关注" class="h-r-input"/>
+          <input type="button" value="我的关注" class="h-r-input order-focus"/>
         </p>
       </div>
     </div>
