--- a/views/orderDetail.ejs
+++ b/views/orderDetail.ejs
@@ -16,7 +16,7 @@
             <div class="h-right">
                 <p id="personName" class="h-r-userName"><%= username%></p><a class="exit fr" href="/signIn">退出登录</a>
                 <p><input type="button" value="发布商品" class="h-r-input" onclick="getOrder()"/>
-                    <input type="button" value="我的关注" class="h-r-input"/>
+                    <input type="button" value="我的关注" class="h-r-input order-focus"/>
                 </p>
             </div>
         </div>
@@ -72,16 +72,5 @@
 <script src="/vendor/jquery.js"></script>
 <script src="/javascripts/index.js"></script>
 <script src="/javascripts/orderDetail.js"></script>
-<!--<script>
-    //分类查询
-    function book_search(x){
-        window.location = '/book_search' + x;
-    }
-    //返回首页
-    function rt_index(){
-        var personName = document.getElementById('personName').innerText;
-        window.location = "/rt_index" + personName;
-    }
-</script>-->
 </body>
 </html>
