--- a/views/uploadOrder.ejs
+++ b/views/uploadOrder.ejs
@@ -29,7 +29,7 @@
                     <ul class="c-l-ul">
                         <li><a href="/index">首&nbsp;页</a></li>
                         <li><a href="/uploadOrder">发布商品</a></li>
-                        <li><a href="#">在线商品</a></li>
+                        <li><a href="/orderOnline">在线商品</a></li>
                         <li><a href="#" class="order-focus">我的关注</a></li>
                         <!--<li id="addClass">添加分类</li>
                         <li>编辑分类</li>
