--- a/public/stylesheets/sass/_order.scss
+++ b/public/stylesheets/sass/_order.scss
@@ -216,6 +216,10 @@
   .c-r-td-addLength{width: 150px;}
   .edit{font-weight: 600;}
   .edit:hover{background:#ef735f;color: white;}
+  .unused {
+    color: lightgray;
+    font-weight: 600;
+  }
   .footer{
     width: 100%;
     height: 100px;
