--- a/public/stylesheets/css/main.css
+++ b/public/stylesheets/css/main.css
@@ -978,6 +978,9 @@ body, html {
   .upload-order .edit:hover {
     background: #ef735f;
     color: white; }
+  .upload-order .unused {
+    color: lightgray;
+    font-weight: 600; }
   .upload-order .footer {
     width: 100%;
     height: 100px;
